# homelab

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  .kube-linter.yaml  .pre-commit-config.yaml  .prettierignore  .yamllint  README.md  renovate.json
.cursor/commands/: commit-message.md
.cursor/rules/: conventional-commit-messages.mdc  flux.mdc  general.mdc  helm.mdc  python.mdc  renovate.mdc  secrets.mdc  security.mdc  talos.mdc
.gitlab/: README.md  chart-tag.gitlab-ci.yml  k8s-validation.gitlab-ci.yml  kubeval.gitlab-ci.yml  kustomize-diff.gitlab-ci.yml  no-op.gitlab-ci.yml  renovate.gitlab-ci.yml
docs/: DOCUMENTATION-STANDARDS.md  README-TEMPLATE.md  configuration-patterns.md  readme-template.md
flux/: README.md
flux/manifests/: kustomization.yaml
flux/manifests/04-apps/media/management/scripts/arrsync/src/: arrsync.py  pyproject.toml
helm/generic-app/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
prompts/: README.md  documentation-review.md  helm-deployment.md  mcp-deployment.md  security-analyst.md
scripts/: download-icons.sh  rolling-reboot.sh  run-renovate.sh  test-chart-tag.sh  test-regex.py
scripts/longhorn/: README.md  attach-volumes-to-default-group.sh  cancel-stuck-restores.sh  cleanup-longhorn-snapshots.sh  cleanup-node-disk-space.sh  cleanup-stopped-replicas.sh  cleanup-talos-ephemeral.sh  clear-engine-restores.sh  clear-restore-conditions.sh  clear-volume-restore-status.sh  recreate-and-restore-volumes.sh  reset-stopped-replicas.sh  restart-degraded-volume-engines.sh  (+5 more)
talos/: README.md  cilium-install.md
terraform/: README.md
(+928 files in other folders)
